--- a/src-tauri/config.ini
+++ b/src-tauri/config.ini
@@ -1,2 +1,2 @@
 Hike_Vision_GatwayURL=http://192.168.1.186:586
-DB_URL="mongodb+srv://pdtuae-hrm:pass@123@cluster0.mf10u.mongodb.net/hrm?retryWrites=true&w=majority"
+DB_URL=""
